# jalki

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SESSION-NEXT.md  skills.md
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: container.yml
.toimija/: repo.yaml
docs/invariants/: agentic-dev-lane.md
docs/jalki/: README.md  ahti-record-mapping.md  local-agent-state.md  probe-definitions.md  product-boundaries.md  runtime-evidence-model.md  v0-scope.md
docs/jalki/adr/: 0001-evidence-sinks-and-probe-intelligence.md  0002-evidence-through-polku-to-vartio.md  0003-native-vartio-sink-retire-polku.md  0004-vartio-sink-runtime-config-surface.md  0005-file-evidence-joins-the-vartio-lane.md
eval/oracle/: Cargo.toml
eval/oracle/src/: main.rs
false-protocol/: Cargo.toml
false-protocol/src/: blocks.rs  error.rs  lib.rs  occurrence.rs  payloads.rs  types.rs
helm/jalki/: Chart.yaml  values.yaml
helm/jalki/templates/: clusterrole.yaml  clusterrolebinding.yaml  daemonset.yaml  service.yaml  serviceaccount.yaml
jalki/: Cargo.toml
jalki-codegen/: Cargo.toml
jalki-codegen/src/: btf.rs  elf.rs  error.rs  insn.rs  lib.rs  program.rs
jalki-common/: Cargo.toml
jalki-common/src/: events.rs  lib.rs
jalki-ebpf/: Cargo.toml
jalki-ebpf/src/: file_open.rs  file_open_attempt.rs  main.rs  process_exec.rs  tcp_close.rs  tcp_connect.rs  tcp_retransmit.rs
jalki-enrich/: Cargo.toml
jalki-enrich/src/: lib.rs
jalki-evidence/: Cargo.toml
jalki-evidence/src/: event.rs  evidence.rs  lib.rs  normalize.rs  retry.rs  sink.rs
jalki-mcp/: Cargo.toml
jalki-mcp/src/: main.rs  tools.rs
jalki-sdk-meta/: Cargo.toml
jalki-sdk-meta/src/: conformance.rs  lib.rs  main.rs  protocol.rs  types.rs
jalki-sdk-meta/src/codegen/: elixir.rs  go.rs  mod.rs  python.rs  typescript.rs
jalki-sdk-python/: pyproject.toml
jalki-sdk-python/src/jalki/: __init__.py  api.py  client.py  knowledge.py  protocol.py  types.py
jalki-sdk-python/tests/: test_conformance.py
jalki-vartio-sink/: Cargo.toml  build.rs
jalki-vartio-sink/proto/: source_ingress.proto
jalki-vartio-sink/src/: lib.rs  native.rs
jalki-vartio-sink/src/proto/: vartio.source_ingress.v1.rs
jalki-vartio-sink/tests/: vartio_live.rs  vartio_sink.rs
jalki/src/: addr.rs  descriptor.rs  emitter.rs  enrich.rs  file_offsets.rs  filter.rs  ipc.rs  knowledge.rs  kube_watch.rs  lib.rs  loader.rs  main.rs  metrics.rs  probe.rs  reader.rs  registry.rs  runtime.rs  sensitive_paths.rs  store.rs
jalki/src/cli/: ask.rs  list.rs  mod.rs  status.rs  stream.rs  watch.rs
jalki/src/emit/: file.rs  grpc.rs  stdout.rs
jalki/src/probes/: file_open.rs  file_open_attempt.rs  generated.rs  process_exec.rs  tcp_close.rs  tcp_connect.rs  tcp_retransmit.rs
knowledge/: fs.json  memory.json  process.json  sched.json  tcp.json
prompts/: fix-ci.md  implement-jalki-pipeline-producer.md  implement-ticket.md  implementation-plan.md  review-diff.md  task-from-idea.md  update-agent-memory.md
specs/: _config.md
specs/knowledge/: knowledge-base.md
specs/protocol/: ask.md  deploy.md  find.md  framing.md  status.md  subscribe.md
specs/sdk/: python.md
xtask/src/: main.rs
