[workspace]
resolver = "2"
members = [
    "jalki-common",
    "jalki",
    "jalki-codegen",
    "jalki-mcp",
    "jalki-sdk-meta",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# eBPF
aya = "0.13"
aya-log = "0.2"

# FALSE Protocol
false-protocol = { path = "../ahti/false-protocol" }

# Metrics
prometheus-client = "0.22"

# Async utilities
async-trait = "0.1"

# gRPC
tonic = "0.12"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
hostname = "0.4"
rmpv = "1"

# Internal
jalki-common = { path = "jalki-common", features = ["userspace"] }
