[package]
name = "jalki-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for jälki — AI agents query the kernel"

[[bin]]
name = "jalki-mcp"
path = "src/main.rs"

[dependencies]
jalki = { path = "../jalki" }
jalki-common = { workspace = true }
false-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
