[package]
name = "jalki-sdk-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Source of truth for jälki SDK types, wire protocol, and conformance tests"

[[bin]]
name = "jalki-sdk-codegen"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
