[package]
name = "jalki"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Programmable fentry/fexit framework for Linux kernel observability"

[[bin]]
name = "jalki"
path = "src/main.rs"

[lib]
name = "jalki"
path = "src/lib.rs"

[dependencies]
jalki-common = { workspace = true }
jalki-evidence = { path = "../jalki-evidence" }
jalki-enrich = { path = "../jalki-enrich" }
jalki-codegen = { path = "../jalki-codegen" }
jalki-vartio-sink = { path = "../jalki-vartio-sink" }
false-protocol = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
prometheus-client = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
hostname = { workspace = true }
rmpv = { workspace = true }
kube = { version = "4.0.0", default-features = false, features = ["runtime", "client", "rustls-tls"] }
k8s-openapi = { version = "0.28.0", features = ["v1_32"] }
futures = "0.3.32"
